remove fixed position of quiz nav buttons, as they sometimes overlap with quiz content.  add space below nav buttons so that they are clickable (issue 58)

--- a/src/styles/components/_consent-info.scss
+++ b/src/styles/components/_consent-info.scss
@@ -16,21 +16,8 @@
         display: flex;
         justify-content: space-between;
         margin-top: 20px;
-
-
-        &--quiz {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-           position: fixed;
-           bottom: 40px;
-           width:100%;
-
-           button:last-child {
-             float:right;
-           }
-        
-        }
+        width:100%;
+        padding-bottom: 100px;
     }
   }
 
